# DiscordMusicBot

./: .gitignore  Cargo.toml  README.md
crates/songbird/: Cargo.toml
crates/songbird/src/: constants.rs  handler.rs  info.rs  manager.rs  ws.rs
crates/songbird/src/driver/: mod.rs  test_impls.rs
crates/songbird/src/driver/connection/: error.rs  mod.rs
crates/songbird/src/driver/scheduler/: live.rs  task.rs
crates/songbird/src/driver/tasks/: mod.rs  ws.rs
crates/songbird/src/driver/tasks/message/: core.rs  mixer.rs  ws.rs
crates/songbird/src/driver/tasks/mixer/: mod.rs
crates/songbird/src/driver/tasks/udp_rx/: mod.rs
crates/songbird/src/events/context/data/: disconnect.rs
crates/songbird/src/input/sources/: ytdl.rs
docs/: spotify-voicemeeter-setup.md  voice-dave-fixes.md
src/: audio_diag.rs  audio_pipe.rs  bot.rs  main.rs  music.rs  playback.rs  smtc.rs  spotify.rs  spotify_status.rs  stream.rs
